tests/cases/traits/errors/structural-capability-duplicate-method.ari
fn save(value: has { serialize() -> i64, serialize() -> i64 }) -> i64 {
  value.serialize()
}

fn main() -> i64 {
  return 0;
}
